# agda2hs-map

./: .gitignore  Makefile  project.cabal
src/Data/Map/: BalancingProofs.agda  Datatype.agda  FunctorLaws.agda  Internal.agda  Internal.checklist.md  ListConversionLaws.agda  PreconditionProofs.agda  Utils.agda  VerifiedInsert.agda
src/Data/Map'/: Balancing.agda  Construction.agda  Datatype.agda  Insertion.agda  Internal.agda  Query.agda
src/Data/Map/Internal/: Balancing.agda  Construction.agda  Datatype.agda  Deletion.agda  Differences.agda  Extras.agda  Filtering.agda  Folding.agda  Indexing.agda  Inserting.agda  Instances.agda  Intersection.agda  Linking.agda  Lists.agda  Mapping.agda  Merging.agda  MinMax.agda  Operators.agda  Query.agda  Splitting.agda  Submapping.agda  Unions.agda
src/Data/Map/TypeclassLaws/: Eq.agda  Foldable.agda  Functor.agda  Monoid.agda  Semigroup.agda  Traversable.agda
src/Data/Sett/: Internal.agda
src/Data/Utils/: Applicative.agda  Bits.agda  Compose.agda  Foldable.agda  Identity.agda  IntegerProofs.agda  PartialOrder.agda  Reasoning.agda
