name:          map
version:       0.0.1
cabal-version: >= 1.10
build-type:    Simple

library
    default-language: Haskell2010
    hs-source-dirs:   build
    build-depends:
      base >= 4.11 && < 5,
      containers,
      fin
    exposed-modules:
      Data.Map.Internal
    other-modules:
      Sample,
      Data.Map.Internal.Datatype,
      Data.Map.Internal.Balancing,
      Data.Map.Internal.Construction,
      Data.Map.Internal.Deletion,
      Data.Map.Internal.Differences,
      Data.Map.Internal.Filtering,
      Data.Map.Internal.Folding,
      Data.Map.Internal.Indexing,
      Data.Map.Internal.Inserting,
      Data.Map.Internal.Instances,
      Data.Map.Internal.Intersection,
      Data.Map.Internal.Linking,
      Data.Map.Internal.Lists,
      Data.Map.Internal.Mapping,
      Data.Map.Internal.Merging,
      Data.Map.Internal.MinMax,
      Data.Map.Internal.Operators,
      Data.Map.Internal.Query,
      Data.Map.Internal.Splitting,
      Data.Map.Internal.Submapping,
      Data.Map.Internal.Unions
